@@ -1,3 +1,7 @@
+2005-04-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/news.ihtml (NOTE): announce 2.5.20
+
 2005-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* GNUmakefile (WEBSERVER): That's now lilypond.org.
